--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.11.13",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
@@ -10,5 +11,8 @@
         "start": "ts-node src/main.ts",
         "build": "tsc",
         "dev": "nodemon --exec ts-node src/main.ts"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17"
     }
 }
