--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
         "@types/node": "^20.11.13",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "https": "^1.0.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     },
